--- a/static/css/main.css
+++ b/static/css/main.css
@@ -2,3 +2,19 @@ body {
     margin: 3rem;
     font-family: Consolas;
 }
+
+table {
+  font-family: arial, sans-serif;
+  border-collapse: collapse;
+  width: 100%;
+}
+
+td, th {
+  border: 1px solid #dddddd;
+  text-align: left;
+  padding: 8px;
+}
+
+tr:nth-child(even) {
+  background-color: #dddddd;
+}
