--- a/templates/index.html
+++ b/templates/index.html
@@ -5,8 +5,13 @@
 {% endblock %}
 
 {% block body %}
-    <h1>Available endpoints:</h1>
-    {% for route in available_routes %}
+    <h2>Available pages:</h2>
+    {% for route in available_views %}
+    <a href="{{ route }}"> {{ route }}</a>
+    <br/>
+    {% endfor %}
+    <h2>Available endpoints:</h2>
+    {% for route in available_api_routes %}
     <a href="{{ route }}"> {{ route }}</a>
     <br/>
     {% endfor %}
