--- a/templates/view_projects.html
+++ b/templates/view_projects.html
@@ -10,18 +10,20 @@
     <table id="projectsData">
         <thead>
             <tr>
-                <th onclick="sortTable(0)">Username</th>
-                <th onclick="sortTable(1)">Scene</th>
-                <th onclick="sortTable(2)">Frames</th>
-                <th onclick="sortTable(3)">Devices</th>
-                <th onclick="sortTable(4)">Size</th>
-                <th onclick="sortTable(5)">Date</th>
+                <th>Block</th>
+                <th onclick="sortTable(1)">Username</th>
+                <th onclick="sortTable(2)">Scene</th>
+                <th onclick="sortTable(3)">Frames</th>
+                <th onclick="sortTable(4)">Devices</th>
+                <th onclick="sortTable(5)">Size</th>
+                <th onclick="sortTable(6)">Date</th>
             </tr>
         </thead>
         <tbody>
             {% for entry in data %}
             <tr>
-                <td><a href="{{ block_url + '?username=' + entry['username'] }}">{{ entry["username"] }}</a></td>
+                <td><a href="{{ block_url + entry['username'] }}">Block</a></td>
+                <td><a href="{{ visit_profile_url + entry['username'] }}">{{ entry["username"] }}</a></td>
                 <td>{{ entry["scene"] }}</td>
                 <td>{{ entry["frames"] }}</td>
                 <td>{{ entry["devices"] }}</td>
