--- a/templates/view_projects_per_user.html
+++ b/templates/view_projects_per_user.html
@@ -11,15 +11,17 @@
         <thead>
             <tr>
                 <th>Block</th>
-                <th onclick="sortTable(1)">Username</th>
-                <th onclick="sortTable(2)">COUNT</th>
+                <th>Profile</th>
+                <th onclick="sortTable(2)">Username</th>
+                <th onclick="sortTable(3)">COUNT</th>
             </tr>
         </thead>
         <tbody>
             {% for entry in data %}
             <tr>
                 <td><a href="{{ block_url + entry['username'] }}">Block</a></td>
-                <td><a href="{{ visit_profile_url + entry['username'] }}">{{ entry["username"] }}</a></td>
+                <td><a href="{{ visit_profile_url + entry['username'] }}">Profile</a></td>
+                <td><a href="{{ projects_by_url + entry['username'] }}">{{ entry["username"] }}</a></td>
                 <td>{{ entry["cnt"] }}</td>
             </tr>
             {% endfor %}
