--- a/templates/base.html
+++ b/templates/base.html
@@ -3,9 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="/static/css/main.css">
+    <link rel="icon" href="/static/images/favicon.ico" type="image/png">
     {% block head %}{% endblock %}
 </head>
 <body>
-    {% block body %}{% endblock %}
+    {% include "navbar.html" %}
+    <div class="page">
+        {% block body %}{% endblock %}
+    </div>
 </body>
 </html>
