--- a/templates/index.html
+++ b/templates/index.html
@@ -5,14 +5,6 @@
 {% endblock %}
 
 {% block body %}
-    <h2>Available pages:</h2>
-    {% for route in available_views %}
-    <a href="{{ route }}"> {{ route }}</a>
-    <br/>
-    {% endfor %}
-    <h2>Available endpoints:</h2>
-    {% for route in available_api_routes %}
-    <a href="{{ route }}"> {{ route }}</a>
-    <br/>
-    {% endfor %}
+    <p>Use the top navigation bar to see the projects</p>
+    <p>Use ?last_hours=N in the end of the url to show the project the last N hours</p>
 {% endblock %}
