--- a/templates/view_projects_per_user.html
+++ b/templates/view_projects_per_user.html
@@ -13,7 +13,7 @@
                 <th>Block</th>
                 <th>Profile</th>
                 <th onclick="sortTable(2)">Username</th>
-                <th onclick="sortTable(3)">COUNT</th>
+                <th onclick="sortTable(3)">Projects</th>
             </tr>
         </thead>
         <tbody>
