--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -5,6 +5,7 @@
         <a href="/view_all_projects?last_hours=48">Projects 48H</a>
         <a href="/view_projects_per_user?last_hours=24">Ppu 24H</a>
         <a href="/view_projects_per_user?last_hours=48">Ppu 48H</a>
+        <a href="/view_projects_per_user?last_hours=168">Ppu 1W</a>
     </div>
     <div class="navright">
         <a href="/login">Login</a>
