wip: project restructure in progress

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,11 +1,11 @@
 <div class="navbar">
     <div class="navleft">
         <a href="/">Home</a>
-        <a href="/view_all_projects?last_hours=24">Projects 24H</a>
-        <a href="/view_all_projects?last_hours=48">Projects 48H</a>
-        <a href="/view_projects_per_user?last_hours=24">Ppu 24H</a>
-        <a href="/view_projects_per_user?last_hours=48">Ppu 48H</a>
-        <a href="/view_projects_per_user?last_hours=168">Ppu 1W</a>
+        <a href="/all_projects?last_hours=24">Projects 24H</a>
+        <a href="/all_projects?last_hours=48">Projects 48H</a>
+        <a href="/projects_per_user?last_hours=24">Ppu 24H</a>
+        <a href="/projects_per_user?last_hours=48">Ppu 48H</a>
+        <a href="/projects_per_user?last_hours=168">Ppu 1W</a>
     </div>
     <div class="navright">
         <a href="/login">Login</a>
